<resources>
    <string name="app_name">MyServiceApp</string>
    <string name="start_background_service">Start Background Service</string>
    <string name="stop_background_service">Stop Background Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="start_bound_service">Start Bound Service</string>
    <string name="stop_bound_service">Stop bound Service</string>
</resources>
